--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,6 @@
+@import 'node_modules/bootstrap/scss/bootstrap';
+@import 'node_modules/bootstrap-vue/src/index.scss';
+
 $primary: #8D1F40;
 $text: white;
 $secondary: lightgreen;
